grammar_to_ply/error_msgs.txt
../programs/c/data_structures/output_programs/errors/linkedlist_len_0_error.c:1:1: error: unknown type name 'Line'
Line no. 8 :  ) missing
^
../programs/c/data_structures/output_programs/errors/linkedlist_len_0_error.c:1:8: error: expected ';' after top level declarator
Line no. 8 :  ) missing
       ^
       ;
../programs/c/data_structures/output_programs/errors/linkedlist_len_0_error.c:4:18: error: unknown type name 'missing'
Line no. 23 :  ; missing
                 ^
../programs/c/data_structures/output_programs/errors/linkedlist_len_0_error.c:5:5: error: expected ';' after top level declarator
Line no. 23 :  Unknown ) found.
    ^
    ;
4 errors generated.
